--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "CHIRAG MANDAL",
   "license": "ISC",
   "description": ""
 }
